--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <jdk.version>17</jdk.version>
 
         <!-- dependencies -->
+        <spring-boot.version>3.0.1</spring-boot.version>
+
         <guava.version>31.1-jre</guava.version>
         <lombok.version>1.18.24</lombok.version>
         <springdoc.version>1.6.14</springdoc.version>
@@ -106,6 +108,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
 
         <!-- database -->
