--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pighand</groupId>
     <artifactId>pighand-framework-spring-parent</artifactId>
-    <version>1.0.2</version>
+    <version>1.1.0</version>
 
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
@@ -42,9 +42,10 @@
         <!-- dependencies -->
         <guava.version>31.1-jre</guava.version>
         <lombok.version>1.18.24</lombok.version>
-        <springdoc.version>1.6.14</springdoc.version>
+        <springdoc.version>2.0.2</springdoc.version>
         <mybatis-ehcache.version>1.2.3</mybatis-ehcache.version>
-        <pighand-framework-spring.version>1.0.1</pighand-framework-spring.version>
+        <pighand-framework-spring.version>1.1.0</pighand-framework-spring.version>
+        <pighand-framework-spring-api.version>1.1.0</pighand-framework-spring-api.version>
         <mysql-connector-java.version>8.0.30</mysql-connector-java.version>
         <druid-spring-boot-starte.version>1.2.15</druid-spring-boot-starte.version>
         <mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
@@ -69,6 +70,11 @@
             <groupId>com.pighand</groupId>
             <artifactId>pighand-framework-spring</artifactId>
             <version>${pighand-framework-spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pighand</groupId>
+            <artifactId>pighand-framework-spring-api</artifactId>
+            <version>${pighand-framework-spring-api.version}</version>
         </dependency>
 
         <!-- spring boot -->
@@ -124,12 +130,7 @@
         <!-- swagger -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-webmvc-core</artifactId>
-            <version>${springdoc.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
         </dependency>
 
