--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,9 +4,9 @@
 name: publish to Maven
 
 on:
-  workflow_dispatch:
-#   release:
-#     types: [created]
+#   workflow_dispatch:
+  release:
+    types: [created]
 
 jobs:
   publish:
