--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pighand</groupId>
     <artifactId>pighand-framework-spring-parent</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1</version>
 
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
@@ -39,16 +39,20 @@
         <encoding>UTF-8</encoding>
         <jdk.version>17</jdk.version>
 
+        <!-- pighand-framework-spring -->
+        <pighand-framework-spring.version>1.1.1</pighand-framework-spring.version>
+        <pighand-framework-spring-api.version>1.1.1</pighand-framework-spring-api.version>
+
         <!-- dependencies -->
         <guava.version>31.1-jre</guava.version>
         <lombok.version>1.18.24</lombok.version>
         <springdoc.version>2.0.2</springdoc.version>
         <mybatis-ehcache.version>1.2.3</mybatis-ehcache.version>
-        <pighand-framework-spring.version>1.1.0</pighand-framework-spring.version>
-        <pighand-framework-spring-api.version>1.1.0</pighand-framework-spring-api.version>
         <mysql-connector-java.version>8.0.30</mysql-connector-java.version>
         <druid-spring-boot-starte.version>1.2.15</druid-spring-boot-starte.version>
         <mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
+        <knife4j-openapi3-jakarta-spring-boot-starter.version>4.0.0
+        </knife4j-openapi3-jakarta-spring-boot-starter.version>
 
         <!-- plugins -->
         <spring-boot-maven-plugin>2.7.0</spring-boot-maven-plugin>
@@ -132,6 +136,11 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>${springdoc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <version>${knife4j-openapi3-jakarta-spring-boot-starter.version}</version>
         </dependency>
 
         <!-- other -->
