--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pighand</groupId>
     <artifactId>pighand-framework-spring-parent</artifactId>
-    <version>1.1.5</version>
+    <version>1.1.7</version>
 
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
@@ -40,13 +40,14 @@
         <jdk.version>17</jdk.version>
 
         <!-- pighand-framework-spring -->
-        <pighand-framework-spring.version>1.1.2</pighand-framework-spring.version>
+        <pighand-framework-spring.version>1.1.4</pighand-framework-spring.version>
         <pighand-framework-spring-api.version>1.1.5</pighand-framework-spring-api.version>
 
         <!-- dependencies -->
         <gson.version>2.10</gson.version>
         <guava.version>31.1-jre</guava.version>
         <lombok.version>1.18.24</lombok.version>
+        <grpc-all.version>1.54.0</grpc-all.version>
         <springdoc.version>2.0.2</springdoc.version>
         <mybatis-ehcache.version>1.2.3</mybatis-ehcache.version>
         <log4j-slf4j-impl.version>2.20.0</log4j-slf4j-impl.version>
@@ -68,7 +69,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.1</version>
+        <version>3.0.5</version>
         <relativePath/>
     </parent>
 
@@ -126,6 +127,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <!-- grpc -->
+        <dependency>
+            <groupId>io.grpc</groupId>
+            <artifactId>grpc-all</artifactId>
+            <version>${grpc-all.version}</version>
         </dependency>
 
         <!-- log -->
