--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pighand</groupId>
     <artifactId>pighand-framework-spring-parent</artifactId>
-    <version>1.2.5</version>
+    <version>1.2.6</version>
 
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
@@ -40,7 +40,7 @@
         <jdk.version>17</jdk.version>
 
         <!-- pighand-framework-spring -->
-        <pighand-framework-spring.version>1.2.2</pighand-framework-spring.version>
+        <pighand-framework-spring.version>1.2.3</pighand-framework-spring.version>
         <pighand-framework-spring-api.version>1.2.3</pighand-framework-spring-api.version>
 
         <!-- dependencies -->
@@ -48,12 +48,14 @@
         <lombok.version>1.18.24</lombok.version>
         <grpc-all.version>1.54.0</grpc-all.version>
         <springdoc.version>2.0.4</springdoc.version>
+        <mapstruct.version>1.5.5.Final</mapstruct.version>
         <reactor-netty.version>1.1.5</reactor-netty.version>
         <mybatis-ehcache.version>1.2.3</mybatis-ehcache.version>
         <log4j-slf4j-impl.version>2.20.0</log4j-slf4j-impl.version>
         <mysql-connector-java.version>8.0.32</mysql-connector-java.version>
         <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
         <jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <druid-spring-boot-starte.version>1.2.16</druid-spring-boot-starte.version>
         <mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
         <knife4j-openapi3-jakarta-spring-boot-starter.version>4.0.0
@@ -222,6 +224,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
@@ -255,6 +262,16 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
+                        </path>
+                        <dependency>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>${lombok-mapstruct-binding.version}</version>
+                        </dependency>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${mapstruct.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
