--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pighand</groupId>
     <artifactId>pighand-framework-spring-parent</artifactId>
-    <version>1.2.4</version>
+    <version>2.0.0-bate.1.20231121</version>
 
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
@@ -40,8 +40,8 @@
         <jdk.version>17</jdk.version>
 
         <!-- pighand-framework-spring -->
-        <pighand-framework-spring.version>1.2.3</pighand-framework-spring.version>
-        <pighand-framework-spring-api.version>1.2.3</pighand-framework-spring-api.version>
+        <pighand-framework-spring.version>2.0.0-bate.1.20231121</pighand-framework-spring.version>
+        <pighand-framework-spring-api.version>2.0.0-bate.1.20231121</pighand-framework-spring-api.version>
 
         <!-- dependencies -->
         <guava.version>31.1-jre</guava.version>
@@ -49,6 +49,7 @@
         <grpc-all.version>1.54.0</grpc-all.version>
         <springdoc.version>2.0.4</springdoc.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <mybatis-flex.version>1.7.3</mybatis-flex.version>
         <reactor-netty.version>1.1.5</reactor-netty.version>
         <mybatis-ehcache.version>1.2.3</mybatis-ehcache.version>
         <log4j-slf4j-impl.version>2.20.0</log4j-slf4j-impl.version>
@@ -57,7 +58,6 @@
         <jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <druid-spring-boot-starte.version>1.2.16</druid-spring-boot-starte.version>
-        <mybatis-plus-boot-starter.version>3.5.3.1</mybatis-plus-boot-starter.version>
         <knife4j-openapi3-jakarta-spring-boot-starter.version>4.0.0
         </knife4j-openapi3-jakarta-spring-boot-starter.version>
 
@@ -189,9 +189,9 @@
             <version>${druid-spring-boot-starte.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>${mybatis-plus-boot-starter.version}</version>
+            <groupId>com.mybatis-flex</groupId>
+            <artifactId>mybatis-flex-spring-boot-starter</artifactId>
+            <version>${mybatis-flex.version}</version>
         </dependency>
 
         <!-- swagger -->
@@ -272,6 +272,11 @@
                             <groupId>org.mapstruct</groupId>
                             <artifactId>mapstruct-processor</artifactId>
                             <version>${mapstruct.version}</version>
+                        </path>
+                        <path>
+                            <groupId>com.mybatis-flex</groupId>
+                            <artifactId>mybatis-flex-processor</artifactId>
+                            <version>${mybatis-flex.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
