--- a/pom.xml
+++ b/pom.xml
@@ -45,15 +45,15 @@
 
         <!-- dependencies -->
         <guava.version>31.1-jre</guava.version>
-        <lombok.version>1.18.24</lombok.version>
+        <lombok.version>1.18.26</lombok.version>
         <grpc-all.version>1.54.0</grpc-all.version>
         <springdoc.version>2.0.4</springdoc.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <mybatis-flex.version>1.7.3</mybatis-flex.version>
+        <mybatis-flex.version>1.7.5</mybatis-flex.version>
         <reactor-netty.version>1.1.5</reactor-netty.version>
         <mybatis-ehcache.version>1.2.3</mybatis-ehcache.version>
         <log4j-slf4j-impl.version>2.20.0</log4j-slf4j-impl.version>
-        <mysql-connector-java.version>8.0.32</mysql-connector-java.version>
+        <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
         <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
         <jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
@@ -71,7 +71,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.5</version>
+        <version>3.1.0</version>
         <relativePath/>
     </parent>
 
@@ -142,10 +142,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
+            <version>2.11.1</version>
         </dependency>
 
         <!-- grpc -->
