--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pighand</groupId>
     <artifactId>pighand-framework-spring-parent</artifactId>
-    <version>2.0.0-bate.1.20231229</version>
+    <version>2.0.0-bate.1.20240109</version>
 
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
@@ -40,12 +40,13 @@
         <jdk.version>17</jdk.version>
 
         <!-- pighand-framework-spring -->
-        <pighand-framework-spring.version>2.0.0-bate.1.20231229</pighand-framework-spring.version>
+        <pighand-framework-spring.version>2.0.0-bate.1.20240109</pighand-framework-spring.version>
         <pighand-framework-spring-api.version>2.0.0-bate.1.20231210</pighand-framework-spring-api.version>
 
         <!-- dependencies -->
         <guava.version>31.1-jre</guava.version>
         <lombok.version>1.18.26</lombok.version>
+        <caffeine.version>3.1.8</caffeine.version>
         <grpc-all.version>1.54.0</grpc-all.version>
         <springdoc.version>2.0.4</springdoc.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
@@ -146,6 +147,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -237,6 +242,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>${caffeine.version}</version>
         </dependency>
     </dependencies>
 
