--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.pighand</groupId>
     <artifactId>pighand-framework-spring-parent</artifactId>
-    <version>2.0.0-bate.1.20240712</version>
+    <version>2.0.0-bate.2.20240713</version>
 
     <packaging>pom</packaging>
     <name>${project.groupId}:${project.artifactId}</name>
@@ -40,26 +40,26 @@
         <jdk.version>17</jdk.version>
 
         <!-- pighand-framework-spring -->
-        <pighand-framework-spring.version>2.0.0-bate.1.20240611</pighand-framework-spring.version>
-        <pighand-framework-spring-api.version>2.0.0-bate.1.20240517</pighand-framework-spring-api.version>
+        <pighand-framework-spring.version>2.0.0-bate.2.20240713</pighand-framework-spring.version>
+        <pighand-framework-spring-api.version>2.0.0-bate.2.20240713</pighand-framework-spring-api.version>
 
         <!-- dependencies -->
-        <guava.version>31.1-jre</guava.version>
-        <lombok.version>1.18.26</lombok.version>
+        <guava.version>33.2.1-jre</guava.version>
+        <lombok.version>1.18.34</lombok.version>
         <caffeine.version>3.1.8</caffeine.version>
-        <grpc-all.version>1.54.0</grpc-all.version>
-        <springdoc.version>2.0.4</springdoc.version>
+        <grpc-all.version>1.65.1</grpc-all.version>
+        <springdoc.version>2.3.0</springdoc.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
-        <mybatis-flex.version>1.7.5</mybatis-flex.version>
-        <reactor-netty.version>1.1.5</reactor-netty.version>
+        <mybatis-flex.version>1.9.3</mybatis-flex.version>
+        <reactor-netty.version>1.1.21</reactor-netty.version>
         <mybatis-ehcache.version>1.2.3</mybatis-ehcache.version>
-        <log4j-slf4j-impl.version>2.20.0</log4j-slf4j-impl.version>
+        <log4j-slf4j-impl.version>2.23.1</log4j-slf4j-impl.version>
         <mysql-connector-java.version>8.0.33</mysql-connector-java.version>
-        <hibernate-validator.version>8.0.0.Final</hibernate-validator.version>
-        <jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
+        <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
+        <jakarta.validation-api.version>3.1.0</jakarta.validation-api.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <druid-spring-boot-starte.version>1.2.16</druid-spring-boot-starte.version>
-        <knife4j-openapi3-jakarta-spring-boot-starter.version>4.0.0
+        <druid-spring-boot-starte.version>1.2.22</druid-spring-boot-starte.version>
+        <knife4j-openapi3-jakarta-spring-boot-starter.version>4.5.0
         </knife4j-openapi3-jakarta-spring-boot-starter.version>
 
         <!-- plugins -->
@@ -72,7 +72,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.0</version>
+        <version>3.3.1</version>
         <relativePath/>
     </parent>
 
@@ -151,7 +151,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
-            <version>2.11.1</version>
+            <version>2.12.0</version>
         </dependency>
 
         <!-- grpc -->
@@ -168,7 +168,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.90.Final</version>
+            <version>4.1.111.Final</version>
         </dependency>
 
         <!-- log -->
@@ -196,7 +196,7 @@
         </dependency>
         <dependency>
             <groupId>com.mybatis-flex</groupId>
-            <artifactId>mybatis-flex-spring-boot-starter</artifactId>
+            <artifactId>mybatis-flex-spring-boot3-starter</artifactId>
             <version>${mybatis-flex.version}</version>
         </dependency>
 
@@ -309,6 +309,13 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>maven_central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
+    </repositories>
 
     <distributionManagement>
         <repository>
